--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
     "@testing-library/user-event": "7.1.2",
+    "axios": "^0.19.2",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-router-dom": "^5.1.2",
