--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.1.5",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-icons": "^3.11.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "yup": "^0.29.3"
